--- a/site/_components/banner-interstitial.njk
+++ b/site/_components/banner-interstitial.njk
@@ -18,7 +18,7 @@
 #}-->
 {% from 'icon.njk' import icon %} {% macro bannerInterstitial(content, microcopy) %}
 <article class="banner-interstitial {{'banner-interstitial--no-cta' if not content.cta}}">
-  <div class="banner-interstitial__inner {% if content.theme.theme %}theme theme__{{content.theme.theme}}{% elif content.tag %}background-color--{{content.normalizedTag}}{% endif %}">
+  <div class="banner-interstitial__inner {% if content.theme.theme %}theme theme__{{content.theme.theme}}{% elif content.tag %}background-color--{{content.normalizedTag | slugify}}{% endif %}">
     <div class="banner-interstitial__content">
       <div class="banner-interstitial__text">
         <small class="banner-interstitial__eyebrow type--h2">{{microcopy.featured.eyebrow}}</small>
@@ -38,8 +38,8 @@
         <img class="banner-interstitial--background-pattern" src="{{content.theme.background}}" alt="" />
         {% endif %} {% endif %} {% else %}
         <picture>
-          <source media="(min-width: 871px)" srcset="ix://landings/news/top/banner-{{content.normalizedTag}}.svg" />
-          <img class="banner-interstitial--background-pattern" src="ix://landings/news/banner-{{content.normalizedTag}}.svg" alt="" />
+          <source media="(min-width: 871px)" srcset="ix://landings/news/top/banner-{{content.normalizedTag | slugify}}.svg" />
+          <img class="banner-interstitial--background-pattern" src="ix://landings/news/banner-{{content.normalizedTag | slugify}}.svg" alt="" />
         </picture>
         {% endif %}
       </div>
