--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -94,6 +94,7 @@
 @import 'components/fifty-fifty';
 @import 'components/featured-story';
 @import 'components/stories-card';
+@import 'components/announcement';
 
 // Component themes
 @import 'components/background-color';
