--- a/astro/src/sass/globals/_vars.scss
+++ b/astro/src/sass/globals/_vars.scss
@@ -19,9 +19,9 @@ $base-font-size: 16px;
 $rhythm: 1.5rem;
 
 // Breakpoints for tech detail page.
-$bkpt-tech-details--2-cols: 758px;
-$bkpt-tech-details--landing: 881px;
-$bkpt-tech-details--3-cols: 988px;
+$bkpt-article--2-cols: 758px;
+$bkpt-article--landing: 881px;
+$bkpt-article--3-cols: 988px;
 
 // Articles
 $bkpt-articles--2-cols: 788px;
