--- a/astro/src/layouts/article.astro
+++ b/astro/src/layouts/article.astro
@@ -53,9 +53,14 @@ const { title, props = [], locale, metadesc, section } = Astro.props;
       grid-template-columns: 300px 1fr minmax(50ch, 80ch) minmax(235px, 320px) 1fr;
     }
 
+    &--header {
+      margin-block: 1.5rem;
+    }
+
     &--header,
     &--content,
     &--extras {
+      padding-inline: 1.5rem;
       @include mq($bkpt-article--2-cols) {
         grid-column: 3;
       }
@@ -68,12 +73,11 @@ const { title, props = [], locale, metadesc, section } = Astro.props;
     }
 
     &--extras {
-      padding-inline: 1.5rem;
       margin-block-end: 2.5rem;
       @include mq($bkpt-article--3-cols) {
+        padding-inline: 0;
         grid-column: 4;
         grid-row: 1 / span 2;
-        margin-block-start: 2.5rem;
         margin-block-end: 0;
       }
     }
