Spin out reusable migration stuff

--- a/astro/src/pages/[lang]/[...path].astro
+++ b/astro/src/pages/[lang]/[...path].astro
@@ -3,65 +3,18 @@ import Article from '$layouts/article.astro';
 import TOC from '$components/TOC.svelte';
 import SectionNav from '$components/SectionNav.svelte';
 import { renderMarkdown } from '$$markdown';
+import { buildSectionsFromGlob, metaFromFile } from '$$data';
 
 /**
  * Builds paths for content files
  */
 export async function getStaticPaths() {
   const articles = await Astro.glob('../../markdown/**/*.md');
-  const sections = articles
-    .map((article) => {
-      const path = article.file.replace(/.*\/markdown\/(.*)\.md/, '$1');
-      const lang = path.split('/')[0];
-      let slug = path.split('/').slice(1).join('/');
-      if (slug.endsWith('/index')) {
-        slug = slug.replace(/\/index$/, '');
-      }
-      const section = slug.split('/')[0];
-
-      return {
-        lang,
-        section,
-        slug,
-        path,
-        weight: article?.frontmatter?.weight || 0,
-        title: article?.frontmatter?.title || '',
-      };
-    })
-    .sort((a, b) => {
-      if (a.title < b.title) {
-        return -1;
-      }
-      if (a.title > b.title) {
-        return 1;
-      }
-      return 0;
-    })
-    .sort((a, b) => a.weight - b.weight)
-    .reduce((acc, cur) => {
-      if (!acc[cur.lang]) {
-        acc[cur.lang] = {};
-      }
-      if (!acc[cur.lang][cur.section]) {
-        acc[cur.lang][cur.section] = [];
-      }
-      acc[cur.lang][cur.section].push({
-        title: cur.title,
-        href: `/${cur.path}`,
-      });
-      return acc;
-    }, {});
+  const sections = buildSectionsFromGlob(articles);
 
   const all = await Promise.all(
     articles.map(async (article) => {
-      const path = article.file.replace(/.*\/markdown\/(.*)\.md/, '$1');
-
-      const lang = path.split('/')[0];
-      let slug = path.split('/').slice(1).join('/');
-      if (slug.endsWith('/index')) {
-        slug = slug.replace(/\/index$/, '');
-      }
-      const section = slug.split('/')[0];
+      const { slug, section, lang } = metaFromFile(article.file);
       const { content, toc } = await renderMarkdown(article.rawContent());
 
       article.frontmatter.date = new Date(article.frontmatter.date);
