--- a/astro/src/layouts/article.astro
+++ b/astro/src/layouts/article.astro
@@ -95,9 +95,14 @@ const microcopy = getMicrocopy(locale.code);
       }
     }
 
+    &--content {
+      padding-block-end: 2.5rem;
+    }
+
     &--subnav {
       @include mq($bkpt-article--2-cols) {
         grid-row: 1 / span 3;
+        margin-block-end: 2.5rem;
       }
     }
 
@@ -107,7 +112,7 @@ const microcopy = getMicrocopy(locale.code);
         padding-inline: 0;
         grid-column: 4;
         grid-row: 1 / span 2;
-        margin-block-end: 0;
+        // margin-block-end: 0;
       }
     }
 
