Fix announcement banner colors

--- a/site/sass/themes/phosphor/style.scss
+++ b/site/sass/themes/phosphor/style.scss
@@ -23,6 +23,7 @@
   @import './components/toc';
   @import './components/type';
   @import './components/cta';
+  @import './components/announcement';
 }
 
 /* stylelint-enable no-invalid-position-at-import-rule */
