--- a/site/sass/themes/phosphor/style.scss
+++ b/site/sass/themes/phosphor/style.scss
@@ -24,6 +24,7 @@
   @import './components/type';
   @import './components/cta';
   @import './components/announcement';
+  @import './components/logo';
 }
 
 /* stylelint-enable no-invalid-position-at-import-rule */
