🐛(site) Fix announcement banner styling (#618)
* Fix announcement banner colors

* Marquees!

* Fix logo color

---------

Co-authored-by: Sam Richard <samrichard@google.com>

--- a/site/sass/themes/phosphor/style.scss
+++ b/site/sass/themes/phosphor/style.scss
@@ -23,6 +23,8 @@
   @import './components/toc';
   @import './components/type';
   @import './components/cta';
+  @import './components/announcement';
+  @import './components/logo';
 }
 
 /* stylelint-enable no-invalid-position-at-import-rule */
