Only include TOC if there is one

--- a/astro/src/pages/[lang]/[...path].astro
+++ b/astro/src/pages/[lang]/[...path].astro
@@ -67,6 +67,6 @@ const locale = {
   <Fragment slot="content" set:html={content} />
   <!-- Extras sidegar -->
   <Fragment slot="extras">
-    <TOC toc={toc} client:load />
+    {toc.length > 0 && <TOC toc={toc} client:load />}
   </Fragment>
 </Article>
