Stub out I/O 2023 theme

--- a/site/sass/components/_themes.scss
+++ b/site/sass/components/_themes.scss
@@ -24,6 +24,12 @@
     --hero-theme-cta-background: transparent;
   }
 
+  &__io-2023 {
+    --hero-theme-color: var(--white);
+    --hero-theme-background: var(--green-500);
+    --hero-theme-cta-background: transparent;
+  }
+
   &__lumafusion {
     --hero-theme-color: var(--white);
     --hero-theme-background: var(--blue-850);
