Update hero I/O post
Still needs a few links

--- a/site/sass/components/_themes.scss
+++ b/site/sass/components/_themes.scss
@@ -25,8 +25,7 @@
   }
 
   &__io-2023 {
-    --hero-theme-color: var(--white);
-    --hero-theme-background: var(--green-500);
+    --hero-theme-background: var(--yellow-500);
     --hero-theme-cta-background: transparent;
   }
 
